--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn success">New Recipe</button>
+    <button class="btn btn-success">New Recipe</button>
   </div>
   <div class="col-xs-12">
     <a href="#" class="list-group-item clearfix" *ngFor="let item of recipes">
