--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -19,7 +19,7 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="imagePath">Image Url</label>
-            <input type="text" name="imagePath" id="name" class="form-control" formControlName="imagePath">
+            <input type="text" name="imagePath" id="name" class="form-control" formControlName="imagePath" #imagePath>
           </div>
         </div>
       </div>
